# potato-crust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
asset-loader/: Cargo.toml
asset_loader/: Cargo.toml
asset_loader/src/: asset_index.rs  common.rs  lib.rs  version_list_manifest.rs  version_manifest.rs
assets/shaders/: atlas-fragment.wgsl  block-fragment.wgsl  block-vertex.wgsl
client/: Cargo.toml
client/assets/shaders/: atlas-fragment.wgsl  atlas-vertex.wgsl  block-atlas.wgsl  block-instanced.wgsl
client/src/: assets.rs  block_info.rs  block_instancing.rs  block_mesh.rs  block_texture.rs  debug_texture.rs  fps.rs  input.rs  main.rs  main.rs.bak  material.rs  player.rs  setup.rs  states.rs
client/src/assets/: atlas_manager.rs  mod.rs  registry.rs
client/src/assets/textures/: atlas_texture_info.rs  block_texture.rs  mod.rs
client/src/material/: block_atlas_material.rs  mod.rs
client/src/world/: block.rs  chunk.rs  mod.rs  systems.rs  voxel.rs
src/: assets.rs  block_material.rs  block_mesh.rs  block_texture.rs  camera.rs  debug_texture.rs  fps.rs  input.rs  main.rs  registry.rs  states.rs
src/assets/: atlas_manager.rs  mod.rs
src/material/: atlas_material.rs  block_material.rs  mod.rs
