[package]
name = "asset_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha1_smol = { version = "1.0.0", features = ["serde", "std"] }
tokio = { version = "1.24.2", features = ["test-util", "macros", "rt"] }
url = { version = "2.3.1", features = ["serde"] }
