[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bevy = { version = "0.10.0", features = ["bevy_ui", "dynamic_linking", "filesystem_watcher"] }
bevy_asset_loader = "0.15.0"
bevy_editor_pls = "0.3.0"
bitmask-enum = "2.1.0"
block-mesh = "0.2.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.5"
num_enum = "0.5.7"
rand = "0.8.5"
rayon = "1.6.1"
thiserror = "1.0.38"
tracing = "0.1.37"
