[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0-rc.2", features = ["bevy_ui", "dynamic_linking", "file_watcher", "bevy_dev_tools"] }
bevy_asset_loader = "0.20.2"
bitmask-enum = "2.2.4"
block-mesh = { git = "https://github.com/parzivale/block-mesh-rs", branch = "main" }
bytemuck = { version = "1.16.0", features = ["derive"] }
color-eyre = "0.6.3"
dashmap = "5.5.3"
fasthash = "0.4.0"
image = "0.25.1"
num_enum = "0.7.2"
rand = "0.9.0-alpha.1"
rayon = "1.10.0"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
tracing = "0.1.40"
